--- a/aquam25lock/index.html
+++ b/aquam25lock/index.html
@@ -43,7 +43,6 @@
         </div>
         <div class="section">
             <button id="copyBtn" disabled>Copy XDR</button>
-            <button id="signBtn" disabled>Sign &amp; Submit</button>
             <button id="labBtn" disabled>Sign with Stellar Lab</button>
         </div>
         <p>This will lock your AQUAm25 tokens for 3 years into a claimable balance.</p>
@@ -61,37 +60,32 @@
         const balanceEl = document.getElementById('balance');
         const amountInput = document.getElementById('amount');
         const copyBtn = document.getElementById('copyBtn');
-        const signBtn = document.getElementById('signBtn');
         const labBtn = document.getElementById('labBtn');
         const xdrEl = document.getElementById('xdr');
         const lockInfoEl = document.getElementById('lockInfo');
 
-        // Debounce & interval handlers
         let refreshInterval;
         let buildDebounce;
 
-        // Prefix for Stellar Lab
+        // Stellar Lab URL parts
         const labPrefix =
             'https://lab.stellar.org/transaction/sign?' +
             '$=network$id=mainnet&' +
             'label=Mainnet&' +
-            'horizonUrl=https://horizon.stellar.org&' +
-            'rpcUrl=https://mainnet.sorobanrpc.com&' +
+            'horizonUrl=https:////horizon.stellar.org&' +
+            'rpcUrl=https:////mainnet.sorobanrpc.com&' +
             'passphrase=Public%20Global%20Stellar%20Network%20/%20September%202015;&' +
+            'transaction$build$classic$operations@$operation_type=&params@;;;;;;&' +
             'sign$activeView=overview&' +
             'importXdr=';
 
-        // Auto-refresh balance and trigger build when key changes
         publicKeyInput.addEventListener('change', () => {
             clearInterval(refreshInterval);
             fetchBalance();
             refreshInterval = setInterval(fetchBalance, 10000);
             scheduleBuild();
         });
-        // Debounce build on amount input
         amountInput.addEventListener('input', scheduleBuild);
-
-        // Percent shortcuts
         document.querySelectorAll('.pct-btn').forEach(btn => {
             btn.addEventListener('click', () => {
                 const bal = parseFloat(balanceEl.textContent) || 0;
@@ -103,7 +97,6 @@
 
         function scheduleBuild() {
             copyBtn.disabled = true;
-            signBtn.disabled = true;
             labBtn.disabled = true;
             clearTimeout(buildDebounce);
             buildDebounce = setTimeout(buildXDR, 700);
@@ -147,36 +140,20 @@
                 const xdr = tx.toXDR();
                 xdrEl.value = xdr;
                 copyBtn.disabled = false;
-                signBtn.disabled = false;
-                // Prepare Stellar Lab link
+                // Build Stellar Lab link
                 const encoded = encodeURIComponent(xdr + ';;');
                 labBtn.disabled = false;
-                labBtn.onclick = () => window.open(labPrefix + encoded + '&xdr$blob=' + encoded);
+                labBtn.onclick = () => window.open(labPrefix + encoded + ';;&xdr$blob=' + encoded + ';;');
             } catch (err) {
                 console.error(err);
             }
         }
 
-        // Copy to clipboard
         copyBtn.addEventListener('click', () => {
             navigator.clipboard.writeText(xdrEl.value).then(() => {
                 copyBtn.textContent = 'Copied!';
                 setTimeout(() => copyBtn.textContent = 'Copy XDR', 2000);
             });
-        });
-
-        // Freighter sign & submit
-        signBtn.addEventListener('click', async () => {
-            if (!window.freighterApi) return alert('Freighter not detected.');
-            try {
-                const { signedTransaction } = await window.freighterApi.signTransaction(xdrEl.value);
-                const tx = new StellarSdk.Transaction(signedTransaction, StellarSdk.Networks.PUBLIC);
-                const result = await server.submitTransaction(tx);
-                alert(`Success! Hash: ${result.hash}`);
-            } catch (err) {
-                console.error(err);
-                alert('Sign/submit error: ' + err.message);
-            }
         });
     </script>
 </body>
