--- a/aquam25/index.html
+++ b/aquam25/index.html
@@ -11,7 +11,7 @@
 
   <!-- Initialize the AQUAm25 Locker module -->
   <script type="module">
-    import { initAquaLocker } from 'mirrasets.com/scripts/aquam25-locker.js';
+    import { initAquaLocker } from '/scripts/aquam25-locker.js';
 
     // Pass in the selector of your trigger element
     initAquaLocker({
