--- a/aquam25/index.html
+++ b/aquam25/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- TEMP for testing ONLY -->
+<meta http-equiv="Content-Security-Policy"
+      content="default-src 'self' https: data: blob:;
+               script-src 'self' https: 'unsafe-inline' 'unsafe-eval'">
+
   <title>AQUAm25 Locker Demo</title>
 </head>
 <body>
